# phasor.js

./: .babelrc  .gitignore  .travis.yml  Cargo.toml  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
example/: index.js
jest/: closeTo.ts  setup.js
spec/: add.spec.ts  angle.spec.ts  approx.spec.ts  classify.spec.ts  closeto.spec.ts  conj.spec.ts  constructor.spec.ts  cosh.spec.ts  div.spec.ts  equal.spec.ts  exp.spec.ts  i.spec.ts  imag.spec.ts  json.spec.ts  ln.spec.ts  log.spec.ts  mul.spec.ts  neg.spec.ts  norm.spec.ts  real.spec.ts  recip.spec.ts  sinh.spec.ts  sub.spec.ts  tsconfig.json  util.ts  wasm.spec.ts
spec/jest/: closeTo.ts  nan.ts
src/: arbitrary.rs  assert.rs  cmp.rs  index.ts  js.rs  lib.rs  phasor.rs  polar.rs  rect.rs  trig.rs
src/phasor/: add.rs  angle.rs  approx.rs  classify.rs  conj.rs  cosh.rs  display.rs  div.rs  exp.rs  imag.rs  ln.rs  log.rs  mul.rs  neg.rs  norm.rs  polar.rs  real.rs  recip.rs  rect.rs  sinh.rs  sub.rs
src/polar/: approx.rs  display.rs
src/rect/: approx.rs  display.rs
tests/: web.rs
