[package]
name = "phasor"
version = "2.1.0"
edition = "2018"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
description= "Complex numbers done right"
repository = "https://github.com/brunocodutra/phasor.js.git"
license = "MIT"
readme = "README.md"
keywords = ["complex", "polar", "phasor", "numeric"]
categories = ["mathematics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
approx = "0.5"

[dev-dependencies]
proptest = { version = "1.0", default-features = false, features = ["std"] }
test-strategy = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
